# openenclave

./: CMakeLists.txt
app/: CMakeLists.txt  app.c
app/common/: app.c
app/enclave/: CMakeLists.txt  app.c
app/host/: CMakeLists.txt  app.c
ext/common/: ext.c
ext/enclave/: CMakeLists.txt  ext.c
ext/host/: CMakeLists.txt  ext.c
host/crypto/bcrypt/: ec.c
host/sgx/: elf.c
include/openenclave/bits/: app.h  ext.h
scripts/ansible/: requirements.txt
tests/oeapp/: CMakeLists.txt  oeapp.edl
tests/oeapp/enc/: CMakeLists.txt  enc.c
tests/oeapp/host/: CMakeLists.txt  host.c
tests/oeext/: CMakeLists.txt  oeext.edl  payload
tests/oeext/enc/: enc.c
tests/oeext/host/: CMakeLists.txt  host.c
tools/oeapp/: CMakeLists.txt  main.c
tools/oeext/: CMakeLists.txt  main.c
